primeiro pro egg

--- a/locales/pt.json
+++ b/locales/pt.json
@@ -49,7 +49,7 @@
         ]
       },
       {
-        "name": "Lanchee - App de cardapio",
+        "name": "Lanchee - App de cardápio",
         "projectUrl": "https://play.google.com/store/apps/details?id=br.com.lanchee",
         "repoUrl": "https://github.com/yokatsu",
         "imgPath": "projectMedia/lanchee.jpeg",
